overflow fixed'

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,8 @@
   color: $color-white;
   height: 70vh;
   min-height: 51rem;
+  overflow: hidden;
+
 
   &__header {
     font-size: 3.5rem;
